<resources>
    <string name="app_name">SimCityAcademy</string>
    <string name="simcity_academy">SimCity Academy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nome_materia">Digite o nome da Matéria:</string>
    <string name="valor_nota">Informe o valor da Nota</string>
    <string name="adicionar_notas">Adicionar Notas</string>
    <string name="materia">Matéria</string>
    <string name="nota">Nota</string>
    <string name="nome_do_aluno">Nome do Aluno</string>
    <string name="materia_desejada">Selecione abaixo a matéria desejada:</string>
    <string name="media_total">Média Total</string>
    <string-array name="materias">
        <item>Agilidade e Soluções Mobile em Negócios</item>
        <item>Organização e Planejamento Aplicação Mobile</item>
        <item>Desenvolvimento de aplicativos Android</item>
        <item>Desenvolvimento de aplicativos IOS</item>
        <item>Aplicações Hibridas e IOT</item>
        <item>Infraestrutura e Automação de Processos</item>
        <item>Design para dispositivos Móbiles</item>
        <item>Móbile game design</item>
        <item> Design thinking</item>
        <item> Estratégia empresarial</item>
        <item> Integração de banco de dados</item>
        <item>Ferramentas de inteligência de negócios</item>
        <item>Finanças empresariais</item>
        <item>Governança corporativa e excelência empresarial</item>
        <item>Marketing estratégico</item>
        <item>Mercado Mobile</item>
    </string-array>
    <string name="title_activity_home_edit">HomeEditActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="editando_valor_da_nota">Editando valor da nota</string>
    <string name="editar_notas">Editar Notas</string>
    <string name="edit_grade">Edição de notas</string>
    <string name="add_grade">Adicionar Notas</string>
</resources>