<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/margin_36"
    tools:context=".BimestresFragments.Bimestre1Fragment">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_nomeAluno"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin_16"
        android:hint="@string/nome_do_aluno"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/edit_Materia"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_Materia"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin_16"
        android:hint="@string/nome_materia"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_nomeAluno" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_nota"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin_16"
        android:hint="@string/valor_nota"
        android:inputType="numberDecimal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_Materia" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_adicionarNotas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16"
        android:backgroundTint="@color/verde_escuro"
        android:text="@string/adicionar_notas"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_nota" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_16"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_adicionarNotas"
        tools:itemCount="5"
        tools:listitem="@layout/lista_notas_item" />

</androidx.constraintlayout.widget.ConstraintLayout>