<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/margin_36"
    tools:context=".ui.bimester.view.BimesterFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_informacao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16"
        android:text="@string/materia_desejada"
        android:textSize="@dimen/size_16"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/sp_materia"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_nota"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin_16"
        android:hint="@string/valor_nota"
        android:inputType="numberDecimal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sp_materia"
        tools:layout_editor_absoluteY="158dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_adicionarNotas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16"
        android:backgroundTint="@color/verde_escuro"
        android:text="@string/adicionar_notas"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_nota" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/sp_materia"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin_16"
        android:layout_marginBottom="44dp"
        android:entries="@array/materias"
        app:layout_constraintBottom_toTopOf="@+id/edit_nota"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_informacao" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_listaNotas"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_16"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_adicionarNotas_edit"
        tools:itemCount="5"
        tools:listitem="@layout/grade_list_item" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_adicionarNotas_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16"
        android:backgroundTint="#E60008"
        android:text="@string/editar_notas"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_nota_edit"
        tools:visibility="visible" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_nota_edit"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin_16"
        android:hint="@string/editando_valor_da_nota"
        android:inputType="numberDecimal"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_adicionarNotas"
        tools:layout_editor_absoluteY="158dp"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>